# Global_Macro_AI_Factors

./: .gitignore  README.md  main.py  pyproject.toml  start_jupyter_lab.sh  stop_jupyter_lab.sh
.claude/: settings.local.json.tmp.10744.53a4ffd6b0d9
data/: baseline_equity_2019_2024.parquet  baseline_targets_2019_2024.parquet  factor_contrast_ext2026.parquet  factor_contrast_split_ext2026.json  factor_contrast_v1.parquet  factor_ext2026_run_header.json  factor_loadings_ext2026.parquet  factor_loadings_v1.parquet  factor_loadings_v2.parquet  factor_loop_ledger_sjm_crowding_v1.csv  (+35 more)
workbook/: ASSESSMENT.md  PIT_ARCHITECTURE.md  README.md  S0.md  SIMULATIONS.md  build_workbook.py  pyproject.toml  pyxll.cfg.example
workbook/factor_workbook/: __init__.py  addin.py  certification.py  contract.py  rederive.py  release.py  steps.py  vendored_ssr.py  verify.py
workbook/tests/: conftest.py  test_addin.py  test_build_workbook.py  test_certification.py  test_contract.py  test_docs.py  test_e2e.py  test_imports.py  test_parity_root_env.py  test_rederive.py  test_release.py  test_steps.py  test_verify.py
workbook/tests/fixtures/: factor_contrast_summary_v1.json  factor_contrast_v1.parquet  factor_decision_log_v1.json  factor_decision_log_v2.json  factor_equity_v2.parquet  factor_loadings_v1.parquet  factor_loadings_v2.parquet  factor_luck_vs_skill_v1.parquet  factor_nonpit_diagnostic_decision_log_v1.json  factor_nonpit_diagnostic_loadings_v1.parquet  factor_nonpit_diagnostic_scores_v1.parquet  factor_scores_v1.parquet  factor_scores_v2.parquet  factor_stability_v1.json  factor_stability_v2.json  factor_targets_v1.parquet  factor_views_v1.parquet  macro_panel_monthly.parquet  naive_directional_eval_openai_gpt-oss-20b.parquet  prompt_version_gate_v1.json  static_bh_equity_2014_2024.parquet  static_bh_equity_2016_2026.parquet  static_bh_stats.json  static_bh_targets_2014_2024.parquet
(+98 files in other folders)
