[project]
name = "global-macro-ai-factors"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "diskcache>=5.6.3",
    "dspy>=3.1.3",
    "ipykernel",
    "jupyter",
    "jupyterlab>=4.5.6",
    "llvmlite==0.43.0",
    "numba==0.60.0",
    "openai>=2.32.0",
    "pandas",
    "psycopg[binary]",
    "pyarrow",
    "python-dotenv",
    "quantstats>=0.0.81",
    "riskfolio-lib>=7.2.1",
    "sqlalchemy",
    "vectorbt>=0.28.2",
]
