[project]
name = "global-macro-ai-factors"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "diskcache>=5.6.3",
    "dspy>=3.1.3",
    "ipykernel",
    "jupyter",
    "jupyterlab>=4.5.6",
    "llvmlite==0.43.0",
    "numba==0.60.0",
    "openai>=2.32.0",
    "pandas",
    "psycopg[binary]",
    "pyarrow",
    "python-dotenv",
    "quantstats>=0.0.81",
    "recall-guard",
    "riskfolio-lib>=7.2.1",
    "sqlalchemy",
    "vectorbt>=0.28.2",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pyxll>=5.12.3",
]

[tool.uv.sources]
recall-guard = { git = "https://github.com/norandom/memguard_alpha.git", rev = "v0.1.0" }
